--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "0.0.12",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.0",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^10.16.15",
+    "lucide-react": "^0.344.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
@@ -25,7 +31,9 @@
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^2.0.0",
     "save": "^2.9.0",
-    "sharp": "^0.33.0"
+    "sharp": "^0.33.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
